--- a/public/newdashboard/css/newstyles_13sep24.css
+++ b/public/newdashboard/css/newstyles_13sep24.css
@@ -3,7 +3,11 @@
 @keyframes open {
     
 }
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     background-color: #fff;
     background: url('../images/map-indonesia.png') center center no-repeat, url('../images/bg-kanan-atas.png') top right no-repeat, url('../images/bg-kanan-bawah.png') bottom right no-repeat, url('../images/bg-kiri-bawah.png') bottom left no-repeat, url('../images/bg-kiri-atas.png') top left no-repeat;
@@ -11,10 +15,9 @@ body {
     color: #636b6f;
     font-family: 'Montserrat', sans-serif;
     font-weight: 200;
-    min-height: 100vh;
     margin: 0;
     position: relative;
-    width: 100%;
+    width: calc(100% - 20px);
     overflow-x: hidden;
 }
 
@@ -35,27 +38,44 @@ body {
     --black2: #999;
 }
 
-/* navigasi menu */
-.navigation
+/* mainmenu */
+.navigasi
 {
     position: fixed;
     margin-top: 10px;
-    width: 250px;
+    width: 238px;
     height: 100%;
-    transition: 0.5s;
     overflow: hidden;
+    transition: 0.5s;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--blue) var(--white);
 }
 
-.navigation.active
+.navigasi::-webkit-scrollbar {
+    width: 8px;
+}
+
+.navigasi::-webkit-scrollbar-track {
+    background: var(--white);
+}
+
+.navigasi::-webkit-scrollbar-thumb {
+    background-color: var(--blue);
+    border-radius: 4px;
+    border: 2px solid var(--white);
+}
+
+.navigasi.active
 {
     width: 0px;
 }
 
-.navigation > ul{
+.navigasi > ul{
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -64,16 +84,30 @@ body {
     left: 0;
     width: 100%;
 }
+.navigasi > ul > li {
+    position: relative;
+    width: 100%;
+    list-style: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.navigasi > ul > li > ul > li {
+    position: relative;
+    width: 100%;
+    list-style: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
 
 /* main content */
 .main
 {
     position: absolute;
-    width: calc(100% - 250px);
+    width: calc(100% - 220px);
     left: 250px;
     min-height: 100vh;
     transition: 0.5s;
-    height: fit-content;
     -webkit-transition: 0.5s;
     -moz-transition:0.5s;
     -ms-transition:0.5s;
@@ -82,8 +116,29 @@ body {
 }
 .main.active
 {
-    width: calc(100% - 30px);
-    left: 30px;
+    width: calc(100% - 0px);
+    left: 20px;
+}
+
+.row > ul {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+}
+
+.row {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.main .row {
+    width: 100%;
 }
 
 .full-height {
@@ -120,6 +175,7 @@ body {
     margin-bottom: 30px;
 }
 
+
 .card-dongker {
     background: #063A69;
     color: #fff;
@@ -129,13 +185,12 @@ body {
 .chart-box {
     text-align: center;
     overflow: hidden;
-    width: initial;
-    height: initial;
+    width: 175px;
+    height: 175px;
 }
 .chart-box canvas {
     
     width: 100%;
-    height: 100%;
 }
 .login-box {
     position: absolute;
@@ -175,9 +230,8 @@ body {
     border-radius: 90px;
 }
 .logo-admin img{
-    height: 60px;
+    height: 100px;
     margin-right: 10px;
-    position: relative;
 }
 .logo-admin .title {
     font-size: 20px;
@@ -194,16 +248,13 @@ body {
     background: #063A69;
 }
 .card-text.small {
-    font-size: 12px;
+    font-size: 10px;
 }
 .logo {
     max-height: 100px;
 }
 .logo-smaller {
     max-height: 50px;
-}
-.avatar {
-    align-items: self-end;
 }
 .avatar img{
     max-height: 50px;
@@ -212,8 +263,12 @@ body {
 
 .btn-dongker {
     background: #063A69;
-    color: #fff;
+    color: #fff;    
     border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
 }
 .btn-dongker:hover {
     background: #063A69;
@@ -288,7 +343,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 10px 10px 20px;
     /* padding: 0 10px; */
 }
 
@@ -313,6 +367,52 @@ body {
     margin-top: 30px;
     font-size: 20px;
     font-weight: bold;
+}
+.table {
+    background-image: linear-gradient(to right, #e6f2ff, #99ccff);
+    font-weight: bold;
+}
+
+.table thead th {
+    background-color: rgba(0, 0, 0, 0.1);
+    font-weight: 800;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.table-hover tbody tr:hover {
+    background-color: rgba(0, 123, 255, 0.1);
+}
+.table tbody td {
+    background-color: rgba(255, 255, 255, 0.7);
+    font-weight: 600;
+}
+
+.table-striped tbody tr:nth-of-type(odd) td {
+    background-color: rgba(230, 242, 255, 0.7);
+}
+
+.table-hover tbody tr:hover td {
+    background-color: rgba(0, 123, 255, 0.1);
+}
+.table td {
+    text-decoration: none;
+    color: #000000;
+}
+
+.table td a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: 600;
+}
+.timeline {
+    font-weight: bold;
+    text-decoration: none;
+    background-image: linear-gradient(to right, #e6f2ff, #aad5fd);
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .user
@@ -358,11 +458,11 @@ body {
     {
         min-width: 40px;
     }
-    .navigation
+    .navigasi
     {
         left: -300px;
     }
-    .navigation.active
+    .navigasi.active
     {
         width: 300px;
         left: 0;
@@ -396,13 +496,13 @@ body {
     {
         min-width: 40px;
     }
-    .navigation
+    .navigasi
     {
         width: 100%;
         left: -100%;
         z-index: 1000;
     }
-    .navigation.active
+    .navigasi.active
     {
         width: 100%;
         left: 0;
@@ -417,56 +517,4 @@ body {
         right: 0;
         left: initial;
     }
-}
-
-
-.font-tebal {
-	font-weight:550;
-}
-.font-tebala {
-	font-weight:700;
-}
-.font-hitam {
-	color:#000;
-}
-.hd_caput {
-	padding:5pt;
-	background: #063A69;
-    color: #fff;
-	border-radius:40px;
-	font-weight:500;
-}
-.hd_caputa {
-	padding-top:25px;
-	height:80px;
-	width:80px;
-	background: #063A69;
-    color: #fff;
-	border-radius:40px;
-	font-weight:500;
-	font-size:18pt!important;
-}
-.tbl_caput {
-	font-size:11pt;
-	border-spacing: 5px;
-	border-collapse: separate;
-}
-.isi_caput {
-	padding:5pt;
-	color:#000;
-	background: #c0c0c0;
-	font-weight:500;
-	text-align:center;
-	border-radius:40px;
-}
-.isi_caputa {
-	padding-top:4px;
-	height:30px;
-	width:30px;
-	color:#fff;
-	background: #063A69;
-	font-weight:500;
-	text-align:center;
-	border-radius:40px;
-    text-decoration: none;
 }
